# soniox_examples

./: .gitignore  README.md
apps/soniox-voice-bot-demo/server/: .env.example  .gitignore  Dockerfile  README.md  languages.py  main.py  messages.py  pyproject.toml  session.py  tools.py
apps/soniox-voice-bot-demo/server/processors/: llm.py  message_processor.py  stt.py  tts.py  vad.py
apps/soniox-voice-bot-demo/twilio/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
csharp/: README.md
node/: configure_model.js  configure_model_ivr.js  configure_model_medical.js  content_moderation_phrases.js  customization_formatting.js  customization_multi_word.js  customization_new_word.js  customization_single_word.js  dictation.js  final_nonfinal_words.js  global_speaker_diarization.js  global_speaker_diarization_speaker_id.js  package.json  profanity_filter.js  streaming_speaker_diarization.js  streaming_speaker_diarization_speaker_id.js  temporary_api_key.js  transcribe_any_stream.js  transcribe_any_stream_audio_format.js  transcribe_file_async.js  transcribe_file_async_separate_recognition.js  transcribe_file_short.js  transcribe_file_short_separate_recognition.js  transcribe_stream_separate_recognition.js  utils.js
python/: caption_rendering.py  cleanup_async.py  configure_model.py  configure_model_ivr.py  configure_model_medical.py  content_moderation_phrases.py  customization_formatting.py  customization_lowlatency.py  customization_multi_word.py  customization_new_word.py  customization_single_word.py  delete_object.py  dictation.py  document_formatting.py  (+30 more)
(+338 files in other folders)
